SH-2009-11-25-0: Bugfix:      Fixed TestParsing.java junit test
                 Review:      CR

MD-2009-11-19-0: CVS:		Created V62u5beta2_TAG
-------------------------------------------------------
MD-2009-11-17-0: CVS:		Created V62u5beta1_TAG
-------------------------------------------------------
MD-2009-11-09-0: CVS:		Created V62u5alpha2_TAG
-------------------------------------------------------

LP-2009-11-06-0: Bugfix:      Cannot install dbwriter as root when
                              $SGE_ROOT/dbwriter is owned by root and
                              admin_user!=root
                 Bugster:     6894239
                 Issue:       3173
                 Review:      MD

CR-2009-10-19-0: Cleanup:     Enhanced logging in junit tests
                 Merged from: V61_BRANCH
                 Review:      AP

MD-2009-10-02-0: CVS:		Created V62u4_TAG
-----------------------------------------------------

MD-2009-09-21-0: Enhancem.:   updated version to 6.2u4

LP-2009-09-01-0: Bugfix:      SMF services should be started even when different
                              SMF service starts them
                 Bugster:     6877588
                 Issue:       3124
                 Review:      MD

JO-2009-06-23-0: Enhancem.: Fixed typos in arco_faq.html

JO-2009-06-22-0: Enhancem.: Updated arco_faq.html

MD-2009-06-15-0: CVS:           Created V62u3_TAG
-----------------------------------------------------

MD-2009-04-21-0: CVS:           Created V62u3beta_TAG
-----------------------------------------------------

RD-2009-02-16-0: CVS:         Created V62u2_TAG
-----------------------------------------------

RD-2009-02-11-0: CVS:         Created V62u2_RC2_TAG
---------------------------------------------------

AP-2009-02-10-0: Bugfix:      PostgreSQL jdbc driver is not bundled in packages,
                              must be handled.
                 Belongs to:  AP-2009-02-03-0
                 Review:      JO
